--- a/home.html
+++ b/home.html
@@ -11,10 +11,10 @@
         <style>
             
             *{font-family: 'Lato', sans-serif;}
-            .AboutMe {border: solid 2px; color:black; padding-bottom: 50 px;padding-left: 20px;}
-            .sidebar {border: solid 2px; color: black; padding-bottom: 50px; padding-left: 20px; padding-right: 20px;}
-            .grid {display: grid; grid-template-columns: 1fr 1fr; column-gap: 20px; background-color: rgb(173, 173, 173);}
-            .footer {border: solid 2px; color: black; padding-bottom: 25px; padding-left: 50px; padding-right: 20px; padding-top: 50 px;}
+            .AboutMe {border: solid 2px; color:black; padding-bottom: 50 px;padding-left: 20px; background-color: white;}
+            .sidebar {border: solid 2px; color: black; padding-bottom: 50px; padding-left: 20px; background-color: white;}
+            .grid {display: grid; grid-template-columns: 1fr 1fr; column-gap: 20px; background-color:rgb(173, 173, 173);}
+            .footer {border: solid 2px; color: black; padding-bottom: 25px; padding-left: 50px; padding-right: 20px; padding-top: 50 px; background-color: white;}
             ul {border: solid 2px black;
                 display:inline-block;
                 list-style: none;
@@ -35,6 +35,7 @@
             li {float: left;}
 
             .header {color: black;}
+            .body {background-color: rgb(173, 173, 173);}
         </style>
     </head>
     <body>
@@ -69,7 +70,7 @@
             }
         </style>
     </head>
-    <body>
+    <body class = "body">
         <ul>
             <li><a class="active" href="home.html">Home</a></li>
             <li><a href="professional.html">Professional</a></li>
