--- a/professional.html
+++ b/professional.html
@@ -9,11 +9,12 @@
 
         <style>
             *{font-family: 'Lato', sans-serif;}
-            .Professional {border:solid 2px; color:black; padding-bottom: 50px; padding-left: 20px;}
+            .body {background-color: rgb(173, 173, 173);}
+            .Professional {border:solid 2px; color:black; padding-bottom: 50px; padding-left: 20px; background-color: white;}
             .grid {display: grid; grid-template-columns: 1fr 1fr;
             column-gap: 20px; background-color: rgb(173, 173, 173)}
-            .side {border: solid 2px; color: black; padding-bottom: 50px; padding-left: 20px; padding-right: 20px;}
-            .footer {border: solid 2px; color: black; padding-bottom: 25px; padding-left: 50px; padding-right: 20px; padding-top: 50 px;}
+            .side {border: solid 2px; color: black; padding-bottom: 50px; padding-left: 20px; padding-right: 20px; background-color: white;}
+            .footer {border: solid 2px; color: black; padding-bottom: 25px; padding-left: 50px; padding-right: 20px; padding-top: 50 px; background-color: white;}
             ul {border: solid 2px black;
                 display:inline-block;
                 list-style: none;
@@ -34,7 +35,7 @@
             .header {color: black}
         </style>
     </head>
-    <body>
+    <body class="body">
         <ul>
             <li><a href="home.html">Home</a></li>
             <li><a class="active" href="professional.html">Professional</a></li>
