--- a/personal.html
+++ b/personal.html
@@ -11,11 +11,12 @@
         <style>
             *{font-family: 'Lato', sans-serif;}
 
-            .Personal {border: solid 2px; color: black; padding-bottom: 50px; padding-left: 20px;}
+            .body {background-color: rgb(173, 173, 173);}
+            .Personal {border: solid 2px; color: black; padding-bottom: 50px; padding-left: 20px; background-color: white;}
             .grid {display: grid; grid-template-columns: 1fr 1fr;
-            column-gap: 20px; background-color: rgb(173, 173, 173)}
-            .right {border: solid 2px; color: black; padding-bottom: 50px; padding-left: 20px; padding-right: 20px;}
-            .footer {border: solid 2px; color: black; padding-bottom: 25px; padding-left: 50px; padding-right: 20px; padding-top: 50 px;}
+            column-gap: 20px; background-color:rgb(173, 173, 173);}
+            .right {border: solid 2px; color: black; padding-bottom: 50px; padding-left: 20px; padding-right: 20px; background-color: white;}
+            .footer {border: solid 2px; color: black; padding-bottom: 25px; padding-left: 50px; padding-right: 20px; padding-top: 50 px; background-color: white;}
             ul {border: solid 2px black;
                 display:inline-block;
                 list-style: none;
@@ -36,7 +37,7 @@
             .header {color: black}
         </style>
     </head>
-    <body>
+    <body class="body">
     <ul>
         <li><a href="home.html">Home</a></li>
         <li><a href="professional.html">Professional</a></li>
