--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
     <div class="grid">
         <div class="AboutMe">
         <h1 class="header">About Me
-            <img src="/favicon-16x16.png">
+            <img src="favicon-16x16.png">
         </h1>
     
     <p>My name is Jenivee Bevan. I am a Cinema and Television Arts Major at Elon University from Greenville, South Carolina.</p>
@@ -63,8 +63,8 @@
             <p>
                 I am nineteen years old and a sophomore in college. I was born in Salt Lake City, Utah and lived there until I was seven years old. When we moved to Greenville, we moved a few times before finally settling down when I was about twelve years old in Taylors, SC. I have always been interested in film and originally wanted to become an actress, but quickly discovered acting is not for me. I really love cameras and want to know more about photography and cinematography. 
             </p>
-            <img src="/IMG_9645.JPEG" width="450">
-            <img src="/IMG_1304.JPEG" width="450">
+            <img src="IMG_9645.JPEG" width="450">
+            <img src="IMG_1304.JPEG" width="450">
         </div>
         <div class="footer">
             <footer>Contact Me: jbevan@elon.edu</footer>
