--- a/personal.html
+++ b/personal.html
@@ -47,7 +47,7 @@
         <div class="grid">
             <div class="Personal">
             <h2 class="header">Personal Life
-                <img src="/favicon-16x16.png">
+                <img src="favicon-16x16.png">
             </h2>
             <p>I am the youngest in my family of four. My sister Madison is twenty one years old and lives in Boone, NC. At home, I have a pet bunny rabbit names Frodo. Frodo is three years old and my best friend. We watch movies together and he is always there to listen. I also have two dogs named Rusty and Miley, and a cat named Bella.</p>
             <img src="IMG_7079.JPG" width="600">    
