--- a/professional.html
+++ b/professional.html
@@ -44,7 +44,7 @@
         <div class="grid">
             <div class="Professional">
             <h2 class="header">Professional Life
-                <img src="/favicon-16x16.png">
+                <img src="favicon-16x16.png">
             </h2>
             <p>I have worked in customer service for many years and in the past year have begun to work on films to get more experience with my major. From July 2019 to April 2020 I worked at a licensed Starbucks. Then, from July 2020 to May 2021 I worked at Good to Go Raw Juice Bar, then worked at a corporate Starbucks from May 2021 to August 2021. After attending my first year at Elon, I returned to Greenville at worked at Starbucks once more from June 2022 to August 2022.</p>
             <img src="IMG_7123.jpg" width="600">
@@ -54,7 +54,7 @@
             <h1 class="student">Student Life</h1>
             <p>Since December 2021, I have worked on film sets with Cinelon on campus. I have been a second assistant camera, first assistant camera, first assistant director, sound mixer, boom operator, script supervisor, production designer, and a production assistant. My favorite thing to do on film sets is production design and camera team. I love designing sets and costumes for films, making the directors vision come to life is very rewarding. I also love cameras and think the technology side of things is very interesting, so I am always trying to learn more.</p>
             <img src="IMG_7898.jpg" width="600">
-            <img src="/IMG_3179.JPEG" width="600">
+            <img src="IMG_3179.JPEG" width="600">
         </div>
         <div class="footer">
             <footer>Contact Me: jbevan@elon.edu</footer>
